--- a/package.json
+++ b/package.json
@@ -2,23 +2,18 @@
     "name": "nucampsite",
     "version": "1.0.0",
     "description": "Nucamp website",
+    "type": "commonjs",
     "main": "index.js",
     "scripts": {
-        "lite": "lite-server",
-        "start": "npm run lite",
+        "start": "node --watch index.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "devDependencies": {
-        "lite-server": "^2.6.1"
-    },
+    "devDependencies": {},
     "dependencies": {
-        "bootstrap": "^4.5.2",
-        "bootstrap-social": "^5.1.1",
-        "font-awesome": "^4.7.0",
-        "jquery": "^3.5.1",
-        "popper.js": "^1.16.1"
+        "ejs": "^3.1.8",
+        "express": "^4.18.2"
     }
 }
